# devops-engineer-from-scratch-project-313

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: links.py
app/core/: config.py  database.py
app/crud/: link.py  link_crud.py
app/db/: session.py
app/models/: link.py
app/schemas/: link.py
tests/: test_api.py  test_links.py  test_links_pagination.py  test_ping.py
