[project]
name = "url-shortener"
version = "0.1.0"
description = "URL shortener service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.1.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
